testdata/parser/negative/1.pdl
#version 100

// sync block nested twice in primitive
primitive main(in a, out b) {
	while (true) {
		synchronous {
			synchronous {}
		}
	}
}
